--- a/templates/terreno.html
+++ b/templates/terreno.html
@@ -22,7 +22,7 @@
         <h2>Rancho 300m²</h2>
         <p>Rancho localizado em Goias com área total de 300m²</p>
         <p>Preço: R$ 1.000.000,00</p>
-        <a href="#" class="btn-comprar">Comprar</a>
+        <a href="terrenos/terreno1/" class="btn-comprar">Comprar</a>
     </div>
     <div class="item-fazenda">
         <a href="display-fazenda">
@@ -31,7 +31,7 @@
         <h2>Rancho 300m²</h2>
         <p>Rancho localizado em Goias com área total de 300m²</p>
         <p>Preço: R$ 1.000.000,00</p>
-        <a href="#" class="btn-comprar">Comprar</a>
+        <a href="terrenos/terreno2/" class="btn-comprar">Comprar</a>
     </div>
     <div class="item-fazenda">
         <a href="display-fazenda">
@@ -40,7 +40,7 @@
         <h2>Rancho 300m²</h2>
         <p>Rancho localizado em Goias com área total de 300m²</p>
         <p>Preço: R$ 1.000.000,00</p>
-        <a href="#" class="btn-comprar">Comprar</a>
+        <a href="terrenos/terreno3/" class="btn-comprar">Comprar</a>
     </div>
 </div>
 
