--- a/templates/terreno.html
+++ b/templates/terreno.html
@@ -11,7 +11,7 @@
 
 {% block content %}
 
-<link href="{% static 'terreno.css' %}" rel="stylesheet" type='text/css'>]
+<link href="{% static 'terrenos.css' %}" rel="stylesheet" type='text/css'>]
 <script src="{% static 'terreno.js' %}"></script>
 
 <div class="display-list">
@@ -22,16 +22,16 @@
         <h2>Rancho 300m²</h2>
         <p>Rancho localizado em Goias com área total de 300m²</p>
         <p>Preço: R$ 1.000.000,00</p>
-        <a href="terrenos/terreno1/" class="btn-comprar">Comprar</a>
+        <a href="/terreno1/" class="btn-comprar">Comprar</a>
     </div>
     <div class="item-fazenda">
         <a href="display-fazenda">
             <img src="{% static 'imagem2.jpg'%}" alt="fazenda01" width="350" height="250">
         </a>
-        <h2>Rancho 300m²</h2>
+        <h2>Sitio²</h2>
         <p>Rancho localizado em Goias com área total de 300m²</p>
         <p>Preço: R$ 1.000.000,00</p>
-        <a href="terrenos/terreno2/" class="btn-comprar">Comprar</a>
+        <a href="/terreno2/" class="btn-comprar">Comprar</a>
     </div>
     <div class="item-fazenda">
         <a href="display-fazenda">
@@ -40,7 +40,7 @@
         <h2>Rancho 300m²</h2>
         <p>Rancho localizado em Goias com área total de 300m²</p>
         <p>Preço: R$ 1.000.000,00</p>
-        <a href="terrenos/terreno3/" class="btn-comprar">Comprar</a>
+        <a href="/terreno3/" class="btn-comprar">Comprar</a>
     </div>
 </div>
 
