--- a/static/terreno.css
+++ b/static/terreno.css
@@ -1,32 +1,44 @@
-*{
-    color: black;
-}
-
-.display-list {
+.info{
+    padding: 20px;
+    width: 100%;
+    height: auto;
     display: flex;
-    flex-wrap: wrap; /* Allow items to wrap to the next row if necessary */
-    padding: 0;
-    gap: 50px;
+    color: black;
+    justify-content: space-between;
+
 }
 
-.item-fazenda {
-    flex: auto;
-    max-width:50%; /* Limit item width to avoid overcrowding */
-    margin: 10px; /* Add spacing between items */
-    border: 1px solid #ccc; /* Add a border for visual separation */
-    padding: 10px;
-    text-align: center;
-    display: inline-grid;
+.info-card{
+    padding: 20px;
+    display: grid;
+    background-color: aliceblue;
+    width: 460px;
+    height: 620px;
+    border-radius: 20px;
 }
 
-/* Style the "Buy Now" button */
-.btn-comprar {
-    display: block;
-    margin-top: 10px;
-    background-color: #007bff;
-    color: #fff;
-    text-decoration: none;
-    padding: 5px 10px;
-    border-radius: 5px;
+.bg-img{
+    width: 1280px;
+    height: 720px;
 }
 
+.stats ul{
+    text-transform: uppercase;
+    font-size: medium;
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.info button{
+    font-size: larger;
+    border: none;
+    text-transform: uppercase;
+    background-color: darkgreen;
+    border-radius: 10px;
+    width: 100%;
+    height: 50%;
+    align-items: end;
+} 
