--- a/static/login.css
+++ b/static/login.css
@@ -1,180 +1,181 @@
-@import url(https://db.onlinewebfonts.com/c/f8ecf8ba4bdf80a4ba4277a3b2f702b6?family=PeydaWeb+SemBd); 
+@import url(https://db.onlinewebfonts.com/c/f8ecf8ba4bdf80a4ba4277a3b2f702b6?family=PeydaWeb+SemBd);
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+    margin: 0 !important; 
+    padding: 0 !important;
+    box-sizing: border-box !important;
 }
+
 a{
-    text-decoration: none;
+    text-decoration: none !important;
 
 }
 .page-login{
-    height: 640px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: "PeydaWeb SemBd"; 
+    height: 640px !important;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+    font-family: "PeydaWeb SemBd" !important; 
 } 
 
 .container{
-    transition: all 0.5s ease;
-    position: relative;
-    width: 460px;
-    height: 640px;
-    border-radius: 12px;
-    padding: 20px 30px 120px;
-    background-color: #9e9e9e;
-    box-shadow: 0 5px 10px rgba(0, 0, 0,0.1);
-    overflow: hidden;
+    transition: all 0.5s ease !important;
+    position: relative !important;
+    width: 460px !important;
+    height: 640px !important;
+    border-radius: 12px !important;
+    padding: 20px 30px 120px !important;
+    background-color: #9e9e9e !important;
+    box-shadow: 0 5px 10px rgba(0, 0, 0,0.1) !important;
+    overflow: hidden !important;
 }
 .login-section{
-    position: absolute;
-    left: 50%;
+    position: absolute !important;
+    left: 50% !important;
     top: 90%;
-    transform: translateX(-50%);
-    width: calc(100% + 180px);
-    padding: 20px 140px;
-    background-color: #fff;
+    transform: translateX(-50%) !important;
+    width: calc(100% + 180px) !important;
+    padding: 20px 140px !important;
+    background-color: #fff !important;
     border-radius: 290px;
-    height: 100%;
-    transition: all 0.6s ease;
+    height: 100% !important;
+    transition: all 0.6s ease !important;
 }
 .login-section header,
 .singup-section header{
-    font-size: 30px;
-    text-align: center;
-    color: #fff;
-    font-weight: 600;
-    cursor: pointer;
+    font-size: 30px !important;
+    text-align: center !important;
+    color: #fff !important;
+    font-weight: 600 !important;
+    cursor: pointer !important;
 }.login-section header{
-    color: #333;
+    color: #333 !important;
 
-opacity: 0.6;
+opacity: 0.6 !important;
 }
 
 .social-buttons{
-    margin-top: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 15px;
+    margin-top: 40px !important;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+    gap: 15px !important;
 }
 
 .social-buttons button{
-    cursor: pointer;
-    align-items: center;
-    width: 100%;
-    padding: 10px;
-    background-color: #fff;
-    border: none;
-    border-radius:10px;
-    font-size: 16px;
-    display: flex;
-    justify-content: center;
-    gap: 6px;
+    cursor: pointer !important;
+    align-items: center !important;
+    width: 100% !important;
+    padding: 10px !important;
+    background-color: #fff !important;
+    border: none !important;
+    border-radius:10px !important;
+    font-size: 16px !important;
+    display: flex !important;
+    justify-content: center !important;
+    gap: 6px !important;
 }
 
 .g-logo{
-    width: 20px;
-    height: 20px;
+    width: 20px !important;
+    height: 20px !important;
 }
 
 
 .login-section .social-buttons button{
-    border: 1px solid #000;
-    cursor: pointer;
+    border: 1px solid #000 !important;
+    cursor: pointer !important;
 
 }
 
 .login-section .social-buttons button i,
 .singup-section .social-buttons button i{
-    font-size: 25px;
-    cursor: pointer;
+    font-size: 25px !important;
+    cursor: pointer !important;
 }
 
 .seperator{
-    margin-top: 20px;
-    display: flex;
-    gap: 20px;
-    align-items: center;
+    margin-top: 20px !important;
+    display: flex !important;
+    gap: 20px !important;
+    align-items: center !important;
 }
 .seperator .line{
-    width: 100%;
-    height: 1px;
-    background-color: #ccc;
+    width: 100% !important;
+    height: 1px !important;
+    background-color: #ccc !important;
 }
 
 .seperator p {
-    color: #fff;
+    color: #fff !important;
 }
 .login-section .seperator p{
-    color: #000;
+    color: #000 !important;
 }
 .container form{
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin-top: 30px;
+    display: flex !important;
+    flex-direction: column !important;
+    gap: 20px !important;
+    margin-top: 30px !important;
 
 }
 
 form input{
-    outline: none;
-    border: none;
-    padding: 10px 15px;
-    font-size: 16px;
-    color: #333;
-    font-weight: 400px;
-    border-radius: 8px;
-    background: #fff;
+    outline: none !important;
+    border: none !important;
+    padding: 10px 15px !important;
+    font-size: 16px !important;
+    color: #333 !important;
+    font-weight: 400px !important;
+    border-radius: 8px !important;
+    background: #fff !important;
     
 }
 
 .login-section input{
-    border: 1px solid #aaa;
+    border: 1px solid #aaa !important;
 }
 form a{
-    color:#333;
+    color:#333 !important;
 }
 
 
 .singup-section form a{
-    color: #fff;
+    color: #fff !important;
 }
 form .btn{
-    margin-top: 15px;
-    border: none;
-    padding: 10px 15px;
-    border-radius: 8px;
-    font-size: 18px;
-    cursor: pointer;
+    margin-top: 15px !important;
+    border: none !important;
+    padding: 10px 15px !important;
+    border-radius: 8px !important;
+    font-size: 18px !important;
+    cursor: pointer !important;
 }
 
 .singup-section .btn{
-    transition: 0.5s;
-    transition-timing-function: ease-in-out;
-    background-color: #323232;
-    color: #fff;
-    border: none;
+    transition: 0.5s !important;
+    transition-timing-function: ease-in-out !important;
+    background-color: #323232 !important;
+    color: #fff !important;
+    border: none !important;
 
 }
 
 .singup-section .btn:hover{
-    background-color: #ffffff;
-    color: #78af00;
+    background-color: #ffffff !important;
+    color: #78af00 !important;
 }
 
 .login-section .btn{
-    transition: 0.5s;
-    transition-timing-function: ease-in-out;
-    background-color: #303f9f;
-    color: #fff;
-    border: none;
+    transition: 0.5s !important;
+    transition-timing-function: ease-in-out !important;
+    background-color: #303f9f !important;
+    color: #fff !important;
+    border: none !important;
 
 }
 
 .login-section .btn:hover{
-    background-color: #ffffff;
-    color: #303f9f;
+    background-color: #ffffff !important;
+    color: #303f9f !important;
 }
 
