--- a/templates/terreno.html
+++ b/templates/terreno.html
@@ -6,42 +6,10 @@
     
 {% bootstrap_javascript %}
 
-
 {% load static %}
 
 {% block content %}
 
-<link href="{% static 'terrenos.css' %}" rel="stylesheet" type='text/css'>]
-<script src="{% static 'terreno.js' %}"></script>
-
-<div class="display-list">
-    <div class="item-fazenda">
-        <a href="display-fazenda">
-            <img src="{% static 'imagem1.jpg'%}" alt="fazenda01" width="350" height="250">
-        </a>
-        <h2>Rancho 300m²</h2>
-        <p>Rancho localizado em Goias com área total de 300m²</p>
-        <p>Preço: R$ 1.000.000,00</p>
-        <a href="/terreno1/" class="btn-comprar">Comprar</a>
-    </div>
-    <div class="item-fazenda">
-        <a href="display-fazenda">
-            <img src="{% static 'imagem2.jpg'%}" alt="fazenda01" width="350" height="250">
-        </a>
-        <h2>Sitio²</h2>
-        <p>Rancho localizado em Goias com área total de 300m²</p>
-        <p>Preço: R$ 1.000.000,00</p>
-        <a href="/terreno2/" class="btn-comprar">Comprar</a>
-    </div>
-    <div class="item-fazenda">
-        <a href="display-fazenda">
-            <img src="{% static 'imagem3.jpg'%}" alt="fazenda01" width="350" height="250">
-        </a>
-        <h2>Rancho 300m²</h2>
-        <p>Rancho localizado em Goias com área total de 300m²</p>
-        <p>Preço: R$ 1.000.000,00</p>
-        <a href="/terreno3/" class="btn-comprar">Comprar</a>
-    </div>
-</div>
+<h1>TESTE</h1>
 
 {% endblock content %}
