--- a/static/base.css
+++ b/static/base.css
@@ -7,9 +7,9 @@
 }
 
 * {
-  padding: 0 !important;
-  margin: 0 !important;
-  box-sizing: border-box !important;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 button {
