--- a/templates/terrenos.html
+++ b/templates/terrenos.html
@@ -5,44 +5,6 @@
 
 {% block content %}
 
-<!-- <link href="{% static 'terreno.css' %}" rel="stylesheet" type='text/css'>
-
-<div class="info">
-    <div class="info-card">
-      
-        <div class="city-text">
-            <h1>Terreno Modelo 1</h1>
-        </div>
-    
-
-        <div class="stats">
-        <ul>
-            <li>
-            <strong>
-            <p class="heading">Estado</p>
-            <p class="footing">Goiás</p>
-            </li>
-            <li>
-            <p class="heading">Tamanho</p>
-            <p class="footing">340 m²</p>
-            </li>
-            <li>
-            <p class="heading">Preço Total</p>
-            <p class="footing">R$ 1.500.000,00</p></strong>
-            </li>
-        
-        </ul>
-        
-        </div>
-
-        <button>Fazer proposta</button>
-    </div>
-
-    <div class="img-container">
-        <img class="bg-img" src="{{ img }}"  alt="" />
-    </div>
-</div> -->
-
 <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/css/bootstrap.css" rel="stylesheet">
 <style>
 
@@ -81,12 +43,13 @@
 {% for nome, valor in propiedades.items %}
   <div class="row">
     <div class="col-12 col-md-6 col-lg-4">
-      <a href="/{{ valor.nome }}/"></a>
-        <img class="card-img-top" src="https://entremochilasemalinhas.com/wp-content/uploads/2023/01/vista-alegre-destaque.jpg" alt="Card image cap">
+      <a href="/{{ valor.nome }}/">
+        <img class="card-img-top" src="{{ valor.img }}" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">{{ valor.nome }}</h5>
           <p class="card-text">{{ valor.desc }}.</p>
         </div>
+      </a>
     </div>
   </div>
 {% endfor %}
