--- a/templates/terreno.html
+++ b/templates/terreno.html
@@ -20,11 +20,11 @@
             <li>
             <strong>
             <p class="heading">Estado</p>
-            <p class="footing">Goiás</p>
+            <p class="footing">{{ valor.estado }}</p>
             </li>
             <li>
             <p class="heading">Tamanho</p>
-            <p class="footing">340 m²</p>
+            <p class="footing">{{ valor.metro }} m²</p>
             </li>
             <li>
             <p class="heading">Preço Total</p>
