EU NÃO AGUENTO MAIS ESSA POHA

--- a/static/base.css
+++ b/static/base.css
@@ -93,6 +93,10 @@ body {
   color: white !important;
 }
 
+#btn-cadastrar{
+  display: none;
+}
+
 /* MAIN
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .page-main {
