--- a/templates/base.html
+++ b/templates/base.html
@@ -21,26 +21,26 @@
     <nav>
       <h2 onclick="homeredirect()" class="logo">LOGO</h2>
       <ul>
-        <li>
+        <!-- <li>
           <a href="/about">Sobre Nós</a>
-        </li>
-        <li>
+        </li> -->
+        <!-- <li>
           <a href="/typeofservice">Serviços</a>
-        </li>
+        </li> -->
         <li>
           <a href="/terrenos">Terrenos</a>
         </li>
-        <li>
+        <!-- <li>
           <a href="/contact">Contatos</a>
-        </li>
+        </li> -->
       </ul>
+      <button onclick="cadastrardirect()" id="btn-cadastrar"></button>
       <button onclick="loginredirect()" class="cta-contact">Entrar</button>
     </nav>
 
   </header>
 
   <!-- {% include "message.html" %} -->
-
 
 
   <main class="page-main">
