--- a/templates/terrenos.html
+++ b/templates/terrenos.html
@@ -14,7 +14,7 @@
 
   .card {
     margin-bottom: 1rem;
-  }
+  } 
 
   .list-view .row > [class*='col-'] {
     max-width: 100%;
@@ -36,22 +36,107 @@
   .card-body{
     color: black;
   }
+
+
+  .container-filtro {
+    display: flex;
+    align-items: center;
+    margin-left: 1100px;
+    color: black;
+  }
+
+  #estados {
+    display: flex;
+    align-items: center;
+  }
+
+  #estados label {
+    margin-top: 5px;
+    margin-right: 3px;
+  }
+
+  /* Ajustes visuais para o slider */
+  .slider {
+    width: 150px;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+  
+  #metragem {
+    margin-left: 5px; /* Espaçamento entre o seletor de estado e a metragem */
+    display: flex;
+    align-items: center;
+  }
+
+  /* Ajustes visuais para a label da metragem */
+  #metragem label {
+    margin-top: 8px;
+  }
+
+  #botao-filtro {
+    margin-left: 10px; /* Espaçamento entre a metragem e o botão */
+  }
+
 </style>
 </head>
 <body>
+
+<div class="container-filtro">
+    <div id="estados">
+      <label for="state">Estado:</label>
+      <select id="state" name="state">
+          <option value="">Selecione um estado</option>
+          <option value="Acre">Acre</option>
+          <option value="Alagoas">Alagoas</option>
+          <option value="Amapá">Amapá</option>
+          <option value="Amazonas">Amazonas</option>
+          <option value="Bahia">Bahia</option>
+          <option value="Ceará">Ceará</option>
+          <option value="Distrito Federal">Distrito Federal</option>
+          <option value="Espírito">Espírito Santo</option>
+          <option value="Goiás">Goiás</option>
+          <option value="Maranhão">Maranhão</option>
+          <option value="Mato Grosso">Mato Grosso</option>
+          <option value="Mato Grosso do Sul">Mato Grosso do Sul</option>
+          <option value="Minas Gerais">Minas Gerais</option>
+          <option value="Pará">Pará</option>
+          <option value="Paraíba">Paraíba</option>
+          <option value="Paraná">Paraná</option>
+          <option value="Pernambuco">Pernambuco</option>
+          <option value="Piauí">Piauí</option>
+          <option value="Rio de Janeiro">Rio de Janeiro</option>
+          <option value="Rio Grande do Norte">Rio Grande do Norte</option>
+          <option value="Rio Grande do Sul">Rio Grande do Sul</option>
+          <option value="Rondônia">Rondônia</option>
+          <option value="Roraima">Roraima</option>
+          <option value="Santa Catarina">Santa Catarina</option>
+          <option value="São Paulo">São Paulo</option>
+          <option value="Sergipe">Sergipe</option>
+          <option value="Tocantins">Tocantins</option>
+      </select>
+      <div id="metragem">
+        <input type="range" min="100" max="1000" value="500" class="slider" id="myRange">
+        <label>Metragem: <span id="demo"></span></label>
+      </div>
+      <button id="botao-filtro" onclick="applyFilters(demo)">Aplicar</button>
+  </div>
+</div>
+
 <div class="container-grid-container">
 {% for nome, valor in propiedades.items %}
   <div class="row">
     <div class="col-12 col-md-6 col-lg-4">
-      <a href="/{{ valor.nome }}/">
+      <a href="/terrenos/{{ valor.nome }}/">
         <img class="card-img-top" src="{{ valor.img }}" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">{{ valor.nome }}</h5>
-          <p class="card-text">{{ valor.desc }}.</p>
+          <p class="card-text">{{ valor.estado }}.</p>
+          <p class="card-text">{{ valor.metragem }}.</p>
         </div>
       </a>
     </div>
   </div>
+
 {% endfor %}
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
@@ -72,6 +157,16 @@
 
   $(document).on('click', '.btn-grid', gridList);
   $(document).on('click', '.btn-list', showList);
+
+
+  var slider = document.getElementById("myRange");
+  var output = document.getElementById("demo");
+  output.innerHTML = slider.value;
+
+  slider.oninput = function() {
+    output.innerHTML = this.value;
+  }
+
 </script>
 </body>
 
