--- a/templates/terrenos.html
+++ b/templates/terrenos.html
@@ -6,121 +6,53 @@
 {% block content %}
 
 <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/css/bootstrap.css" rel="stylesheet">
-<style>
-
-  .container-grid-container {
-    padding-top: 20px;
-  }
-
-  .card {
-    margin-bottom: 1rem;
-  } 
-
-  .list-view .row > [class*='col-'] {
-    max-width: 100%;
-    flex: 0 0 100%;
-  }
-
-  .list-view .card {
-    flex-direction: column;
-  }
-
-  .list-view .card .card-img-top {
-    width: auto;
-  }
-
-  .list-view .card .card-body {
-    display: inline-block;
-  }
-
-  .card-body{
-    color: black;
-  }
+<link href="{% static 'terrenos.css' %}" rel="stylesheet">
 
 
-  .container-filtro {
-    display: flex;
-    align-items: center;
-    margin-left: 1100px;
-    color: black;
-  }
-
-  #estados {
-    display: flex;
-    align-items: center;
-  }
-
-  #estados label {
-    margin-top: 5px;
-    margin-right: 3px;
-  }
-
-  /* Ajustes visuais para o slider */
-  .slider {
-    width: 150px;
-    margin-left: 5px;
-    margin-right: 5px;
-  }
-  
-  #metragem {
-    margin-left: 5px; /* Espaçamento entre o seletor de estado e a metragem */
-    display: flex;
-    align-items: center;
-  }
-
-  /* Ajustes visuais para a label da metragem */
-  #metragem label {
-    margin-top: 8px;
-  }
-
-  #botao-filtro {
-    margin-left: 10px; /* Espaçamento entre a metragem e o botão */
-  }
-
-</style>
 </head>
 <body>
-
-<div class="container-filtro">
-    <div id="estados">
-      <label for="state">Estado:</label>
-      <select id="state" name="state">
-          <option value="">Selecione um estado</option>
-          <option value="Acre">Acre</option>
-          <option value="Alagoas">Alagoas</option>
-          <option value="Amapá">Amapá</option>
-          <option value="Amazonas">Amazonas</option>
-          <option value="Bahia">Bahia</option>
-          <option value="Ceará">Ceará</option>
-          <option value="Distrito Federal">Distrito Federal</option>
-          <option value="Espírito">Espírito Santo</option>
-          <option value="Goiás">Goiás</option>
-          <option value="Maranhão">Maranhão</option>
-          <option value="Mato Grosso">Mato Grosso</option>
-          <option value="Mato Grosso do Sul">Mato Grosso do Sul</option>
-          <option value="Minas Gerais">Minas Gerais</option>
-          <option value="Pará">Pará</option>
-          <option value="Paraíba">Paraíba</option>
-          <option value="Paraná">Paraná</option>
-          <option value="Pernambuco">Pernambuco</option>
-          <option value="Piauí">Piauí</option>
-          <option value="Rio de Janeiro">Rio de Janeiro</option>
-          <option value="Rio Grande do Norte">Rio Grande do Norte</option>
-          <option value="Rio Grande do Sul">Rio Grande do Sul</option>
-          <option value="Rondônia">Rondônia</option>
-          <option value="Roraima">Roraima</option>
-          <option value="Santa Catarina">Santa Catarina</option>
-          <option value="São Paulo">São Paulo</option>
-          <option value="Sergipe">Sergipe</option>
-          <option value="Tocantins">Tocantins</option>
-      </select>
-      <div id="metragem">
-        <input type="range" min="100" max="1000" value="500" class="slider" id="myRange">
-        <label>Metragem: <span id="demo"></span></label>
-      </div>
-      <button id="botao-filtro" onclick="applyFilters(demo)">Aplicar</button>
+<form enctype="multipart/form-data" action="/terrenos/" method="post">{% csrf_token %}
+  <div class="container-filtro">
+      <div id="estados">
+        <label for="state">Estado:</label>
+        <select id="state" name="state">
+            <option value="">Selecione um estado</option>
+            <option value="Acre">Acre</option>
+            <option value="Alagoas">Alagoas</option>
+            <option value="Amapá">Amapá</option>
+            <option value="Amazonas">Amazonas</option>
+            <option value="Bahia">Bahia</option>
+            <option value="Ceará">Ceará</option>
+            <option value="Distrito Federal">Distrito Federal</option>
+            <option value="Espírito">Espírito Santo</option>
+            <option value="Goiás">Goiás</option>
+            <option value="Maranhão">Maranhão</option>
+            <option value="Mato Grosso">Mato Grosso</option>
+            <option value="Mato Grosso do Sul">Mato Grosso do Sul</option>
+            <option value="Minas Gerais">Minas Gerais</option>
+            <option value="Pará">Pará</option>
+            <option value="Paraíba">Paraíba</option>
+            <option value="Paraná">Paraná</option>
+            <option value="Pernambuco">Pernambuco</option>
+            <option value="Piauí">Piauí</option>
+            <option value="Rio de Janeiro">Rio de Janeiro</option>
+            <option value="Rio Grande do Norte">Rio Grande do Norte</option>
+            <option value="Rio Grande do Sul">Rio Grande do Sul</option>
+            <option value="Rondônia">Rondônia</option>
+            <option value="Roraima">Roraima</option>
+            <option value="Santa Catarina">Santa Catarina</option>
+            <option value="São Paulo">São Paulo</option>
+            <option value="Sergipe">Sergipe</option>
+            <option value="Tocantins">Tocantins</option>
+        </select>
+        <div id="metragem">
+          <input name="metro" type="range" min="100" max="1000" value="500" class="slider" id="myRange">
+          <label>Metragem: <span id="demo"></span></label>
+        </div>
+        <button id="botao-filtro" onclick="applyFilters()">Aplicar</button>
+    </div>
   </div>
-</div>
+</form>
 
 <div class="container-grid-container">
 {% for nome, valor in propiedades.items %}
@@ -130,8 +62,8 @@
         <img class="card-img-top" src="{{ valor.img }}" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">{{ valor.nome }}</h5>
-          <p class="card-text">{{ valor.estado }}.</p>
-          <p class="card-text">{{ valor.metragem }}.</p>
+          <p class="card-text">{{ valor.estado }}</p>
+          <p class="card-text">{{ valor.metro }} M²</p>
         </div>
       </a>
     </div>
@@ -166,6 +98,35 @@
   slider.oninput = function() {
     output.innerHTML = this.value;
   }
+
+  // ______________________
+  // function applyFilters() {
+  //           // Obtém os valores dos inputs
+  //           const estado = document.getElementById('state').value;
+  //           const metragem = document.getElementById('myRange').value;
+
+  //           // Constrói a URL com os parâmetros de consulta
+  //           const url = `/filtrar_terrenos/?state=${encodeURIComponent(estado)}&metragem=${encodeURIComponent(metragem)}`;
+
+  //           // Envia uma requisição GET para a URL construída
+  //           fetch(url)
+  //           .then(response => response.json())
+  //           .then(data => {
+  //               const resultadosDiv = document.getElementById('resultados');
+  //               resultadosDiv.innerHTML = ''; // Limpar resultados anteriores
+                
+  //               // Exibir novos resultados
+  //               for (const id in data) {
+  //                   const item = document.createElement('div');
+  //                   item.textContent = `ID: ${id}, Detalhes: ${JSON.stringify(data[id])}`;
+  //                   resultadosDiv.appendChild(item);
+  //               }
+  //           })
+  //           .catch(error => {
+  //               console.error('Error:', error);
+  //           });
+  //       }
+  // ______________________
 
 </script>
 </body>
